@@ -4333,6 +4333,51 @@ Function Open-FirewallLog {
 }
 
 
+Function Open-HomeAssistant {
+    <#
+       .Notes
+        AUTHOR: Skyler Hart
+        CREATED: 2022-03-08 21:51:19
+        LASTEDIT: 2022-03-08 21:51:19
+        KEYWORDS:
+        REQUIRES:
+.LINK
+    https://wstools.dev
+#>
+    [Diagnostics.CodeAnalysis.SuppressMessageAttribute(
+        "PSAvoidGlobalVars",
+        "",
+        Justification = "Have tried other methods and they do not work consistently."
+    )]
+    [CmdletBinding()]
+    Param (
+        [Parameter(Mandatory=$false)]
+        [Switch]$Chrome,
+
+        [Parameter(Mandatory=$false)]
+        [Switch]$Edge,
+
+        [Parameter(Mandatory=$false)]
+        [Switch]$Firefox,
+
+        [Parameter(Mandatory=$false)]
+        [Switch]$InternetExplorer
+    )
+
+    $config = $Global:WSToolsConfig
+    $URL = $config.HomeAssistant
+
+    if ($Chrome) {Start-Process "chrome.exe" $URL}
+    elseif ($Edge) {Start-Process shell:AppsFolder\Microsoft.MicrosoftEdge_8wekyb3d8bbwe!MicrosoftEdge $URL}
+    elseif ($Firefox) {Start-Process "firefox.exe" $URL}
+    elseif ($InternetExplorer) {Start-Process "iexplore.exe" $URL}
+    else {
+        #open in default browser
+        (New-Object -com Shell.Application).Open($URL)
+    }
+}
+
+
 function Open-HomeDrive {
 <#
 .NOTES
