@@ -9,6 +9,7 @@ Known issues:
 ######################
 New features and other changes:
 1. Fixed an issue that caused Get-RecentUser to not work.
+2. Added Open-HomeAssistant function and HomeAssistant config item.
 
 ######################
 #                    #
